feat: support delete record
